# GPUInformation

./: .gitignore  CMakeLists.txt  GPUInformation.cu  README.md
